# EventLogger

./: .gitignore  README.md
EventLogger Qt6/: CMakeLists.txt  EventLogger.conf  EventLogger.pro  build.bat  kopiowanie.txt
EventLogger Qt6/include/: QrzSessionManager.h  mainwindow.h
EventLogger Qt6/include/debugwindow/: debugwindow.h
EventLogger Qt6/include/settings/: SettingsManager.h  settingsdialog.h
EventLogger Qt6/include/utils/: ADIF.h  ADIFfile.h  Crypto.h  Logger.h  MessageClient.hpp  MessageServer.hpp  NetworkMessage.hpp  Radio.hpp
EventLogger Qt6/res/icons/: icons-backup.qrc  resources.qrc
EventLogger Qt6/src/: QrzSessionManager.cpp  main.cpp  mainwindow.cpp
EventLogger Qt6/src/debugwindow/: debugwindow.cpp
EventLogger Qt6/src/settings/: SettingsManager.cpp  settingsdialog.cpp
EventLogger Qt6/src/utils/: ADIF.cpp  ADIFfile.cpp  Crypto.cpp  Logger.cpp  MessageAggregator.cpp  MessageClient.cpp  NetworkMessage.cpp  Radio.cpp  UDPDaemon.cpp
EventLogger Qt6/ui/: DebugWindow.ui  mainwindow.ui
EventLogger Qt6/ui/debugwindow/: debugwindow.ui
EventLogger Qt6/ui/settings/: settingsdialog.ui  settingsdialog.ui.bak
